<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Createuser"
    android:background="@color/Grey">
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/selectImageButton"
        android:text="button"/>

    <ImageView
        android:layout_height="200dp"
        android:layout_width="200dp"
        android:id="@+id/selectImage"
        android:autofillHints="profile picture"
        android:src="@drawable/ic_people_24px"/>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/first_name" />
        <EditText
            android:layout_width="wrap_content"
            android:text="@string/surname"
            android:id="@+id/surname"
            android:inputType="text"/>
    </TableRow>
    <EditText
        android:layout_width="match_parent"
        android:text="@string/prompt_email"
        android:id="@+id/emailAddress1"
        android:inputType="text"/>
    <EditText
        android:layout_width="match_parent"
        android:text="@string/prompt_password"
        android:id="@+id/password1"
        android:inputType="textPassword"/>
    <EditText
        android:layout_width="match_parent"
        android:text="@string/phone_number"
        android:id="@+id/phonenumber"
        android:inputType="text"/>
    <TableRow>
    <Button
        android:id="@+id/signup"
        android:text="@string/signup"
        android:textAlignment="center"
        android:layout_width="205dp"
        android:width="205dp"
        android:layout_marginStart="102.5dp"/>
    </TableRow>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/show"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/TextView2"
        android:text="@string/action_sign_in"/>
</TableLayout>